Touch up issues with screen sizes and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ html {
   background-color: #0084b6;
 }
 
-.quote-2 > div:nth-child(2){
+.quote-2 > div:nth-child(2) p {
   border-top: 3px solid #F0F1F0;
   border-bottom: 3px solid #F0F1F0;
 }
